--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
 
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="img/3.png" class="img-fluid">
+							<img src="https://avatars.githubusercontent.com/u/98416058?v=4" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
 							<p class="sayHi">Hello</p>
 
 							<div class="name">
-								<p><span>I'm</span> Lmint</p>
+								<p><span>I'm</span> Aiko!</p>
 								<p class="s">Verified
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
-								<p><span class="ion-android-globe"></span> AnonyViet.com</p>
+								<p><span class="ion-android-globe"></span> AikoCute.com</p>
 							</div>
 							<hr>
 
 							<div class="detailInfo">
 								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Tên</div>
-									<div class="col-lg-8 col-12 b">Lmint</div>
+									<div class="col-lg-4 col-12 boldd">Name</div>
+									<div class="col-lg-8 col-12 b">Aiko</div>
 								</div>
 								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Công ty</div>
-									<div class="col-lg-8 col-12 b">AnonyViet Site</div>
+									<div class="col-lg-4 col-12 boldd">Company</div>
+									<div class="col-lg-8 col-12 b">AikoCuteHotMe</div>
 								</div>
 								<div class="row my-2">
 									<div class="col-lg-4 col-12 boldd">Jobs</div>
-									<div class="col-lg-8 col-12 b">Web Developer</div>
+									<div class="col-lg-8 col-12 b">Student</div>
 								</div>
 								<div class="row">
-									<div class="col-lg-4 col-12 boldd">Tuổi</div>
-									<div class="col-lg-8 col-12 b">19 Years Old</div>
+									<div class="col-lg-4 col-12 boldd">Age</div>
+									<div class="col-lg-8 col-12 b">Secret</div>
 								</div>
 
 							</div>
@@ -71,8 +71,7 @@
 			</div>
 			<div class="col-11 mx-auto bg-danger contact text-center">
 				<div class="social col-12">
-					<!-- Facebook -->
-					<a href="https://facebook.com/minhthong.lu.58" target="_blank">
+					<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
 						<span class="ion-social-facebook mr-4 mr-lg-5"></span>
 					</a>
 					<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
