--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		}
 	  </style>
 <head>
+	<link rel="icon" href="img/AikoIcon.ico">
 	<meta charset="UTF-8">
 	<title>AikoCute</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -135,7 +136,7 @@
 								<p class="s">Verified
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
-								<p><span class="ion-android-globe"></span> AikoCute.com</p>
+								<p><span class="ion-android-globe"></span> <a href=>aikocute.com</a></p>
 							</div>
 							<hr>
 
