--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<p class="s">Verified
 									<span class="ion-ios-checkmark-outline"></span>
 								</p>
-								<p><span class="ion-android-globe"></span> <a href=>aikocute.com</a></p>
+								<p><span class="ion-android-globe"></span> <a href=>AikoCute.com</a></p>
 							</div>
 							<hr>
 
