--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@ del{opacity:0.6}
 <a href='#'>April 18th, 2001</a><i class='fas fa-birthday-cake'></i>
 </div>
 <div class='link'>
-<a href='https://goo.gl/maps/dTxc1RtYDfz3aj1u6' target='_blank'>Nhơn Bình, Quy Nhơn, Bình Định</a><i class='fas fa-map-marker-alt'></i>
+<a href='https://goo.gl/maps/dTxc1RtYDfz3aj1u6' target='_blank'>Nhon Binh, Quy Nhon, Binh Dinh</a><i class='fas fa-map-marker-alt'></i>
 </div>
 <div class='link'>
-<a href='https://www.facebook.com/hajimecute2001 target='_blank'>Đặng Gia Thừa</a><i class='fab fa-facebook-square'></i>
+<a href='https://www.facebook.com/hajimecute2001 target='_blank'>Dang Gia Thua</a><i class='fab fa-facebook-square'></i>
 </div>
 <div class='link'>
 <a href='https://github.com/AikoCute' target='_blank'>@AikoCute</a><i class='fab fa-github-square'></i>
