--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ del{opacity:0.6}
 <h1>Education</h1>
 <div class='list'>
 <div class='edu'>
-<h2>Quy Nhơn University</h2>
+<h2>Quy Nhon University</h2>
 <div class='edu-date'>Aug. 2021 - Current</div>
 <p class='edu-description'>I am a student <b>Quy Nhon University</b> with the dream of becoming a professional developer.</p>
 </div>
