--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class='v2' dir='ltr' lang='vi' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
+	<script type="text/javascript" src="https://itexpress.vn/js/noel_black.js"></script>
 	<link href='img/AikoIcon.ico' rel='shortcut icon' type='image/x-icon'/>
     <head>
 		<title>Aiko</title>
