--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ del{opacity:0.6}
 
 .toggle-theme {
 	width: 100px; height: 100px;
-	position: absolute;
+	position: fixed;
 	bottom: 50px; left: 50px;
 	z-index: 999999999;
 	background-image: url("./img/toggle-icon-off.jpg");
