--- a/index.html
+++ b/index.html
@@ -158,20 +158,23 @@ del{opacity:0.6}
 <h1>Education</h1>
 <div class='list'>
 <div class='edu'>
-<h2>Quy Nhon University</h2>
+<h2>Quy Nhon University (<a href='https://qnu.edu.vn/' target='_blank'>qnu.edu.vn</a>)</h2>
 <div class='edu-date'>Aug. 2021 - Current</div>
 <p class='edu-description'>I am a student <b>Quy Nhon University</b> with the dream of becoming a professional developer.</p>
 </div>
 <div class='edu'>
-<h2>THPT Phan Chu Trinh</h2>
+<h2>THPT Phan Chu Trinh (<a href='http://c3phanchutrinh.daklak.edu.vn/' target='_blank'>c3phanchutrinh.daklak.edu.vn</a>)</h2>
 <div class='edu-date'>Aug. 2017 - May. 2020</div>
 <p class='edu-description'>General education</p>
 </div>
 <div class='edu'>
-<h2>THCS Ngo May</h2>
+<h2>THCS Ngo May (<a href='http://thcsngomay.eahleo.edu.vn/' target='_blank'>thcsngomay.eahleo.edu.vn</a>)</h2>
 <div class='edu-date'>Aug. 2012 - May. 2016</div>
 <p class='edu-description'>Basic education</p>
 </div>
+<h2>TH Phan Chu Trinh (<a href='http://thphanchutrinh.eahleo.edu.vn/' target='_blank'>thphanchutrinh.eahleo.edu.vn</a>)</h2>
+<div class='edu-date'>Aug. 2017 - May. 2011</div>
+<p class='edu-description'>Basic education</p>
 </div>
 </div>
 <div class='projects'>
